# CPC_Practice

./: CMakeLists.txt
solved/CSES/: Increasing_Array.cpp  Missing_Number.cpp  Permutations.cpp
solved/Kattis/: Adding_Trouble.cpp  Autori.cpp  Batter_Up.cpp  Betting.cpp  Building_Pyramids.cpp  Cold-puter_Science.cpp  Digit_Swap.cpp  Echo_Echo_Echo.cpp  Eye_of_Sauron.cpp  FYI.cpp  GCVWR.cpp  Greetings.cpp  IsItHalloween.cpp  Jack-O-Lantern_Juxtaposition.cpp  Jumbo_Javelin.cpp  Metronome.cpp  N-sum.cpp  Odd_Echo.cpp  Quadrant_Selection.cpp  Quality-Adjusted_Life-Year.cpp  R2.cpp  Reverse.cpp  Sort_Two_Numbers.cpp  Stuck_In_A_Time_Loop.cpp  Take_Two_Stones.cpp  Which_is_Greater.cpp
