cmake_minimum_required(VERSION 3.23)
project(compprog)

set(CMAKE_CXX_STANDARD 20)

add_executable(compprog main.cpp)

add_executable(Missing_Number "solved/CSES/Missing_Number.cpp")
add_executable(Increasing_Array /Users/tomo/CLionProjects/compprog/solved/CSES/Increasing_Array.cpp)
add_executable(Permutations /Users/tomo/CLionProjects/compprog/solved/CSES/Permutations.cpp)
add_executable(Cold-puter_Science /Users/tomo/CLionProjects/compprog/solved/Kattis/Cold-puter_Science.cpp)
add_executable(Jack-O-Lantern_Juxtaposition /Users/tomo/CLionProjects/compprog/solved/Kattis/Jack-O-Lantern_Juxtaposition.cpp)
add_executable(Take_Two_Stones /Users/tomo/CLionProjects/compprog/solved/Kattis/Take_Two_Stones.cpp)
add_executable(R2 /Users/tomo/CLionProjects/compprog/solved/Kattis/R2.cpp)
add_executable(Autori /Users/tomo/CLionProjects/compprog/solved/Kattis/Autori.cpp)
add_executable(Metronome /Users/tomo/CLionProjects/compprog/solved/Kattis/Metronome.cpp)

add_executable(Reverse /Users/tomo/CLionProjects/compprog/solved/Kattis/Reverse.cpp)
add_executable(Building_Pyramids /Users/tomo/CLionProjects/compprog/solved/Kattis/Building_Pyramids.cpp)
add_executable(Batter_Up /Users/tomo/CLionProjects/compprog/solved/Kattis/Batter_Up.cpp)
add_executable(Echo_Echo_Echo /Users/tomo/CLionProjects/compprog/solved/Kattis/Echo_Echo_Echo.cpp)
add_executable(Stuck_In_A_Time_Loop /Users/tomo/CLionProjects/compprog/solved/Kattis/Stuck_In_A_Time_Loop.cpp)
add_executable(Odd_Echo /Users/tomo/CLionProjects/compprog/solved/Kattis/Odd_Echo.cpp)
add_executable(Quality-Adjusted_Life-Year /Users/tomo/CLionProjects/compprog/solved/Kattis/Quality-Adjusted_Life-Year.cpp)
add_executable(Greetings /Users/tomo/CLionProjects/compprog/solved/Kattis/Greetings.cpp)
add_executable(FYI /Users/tomo/CLionProjects/compprog/solved/Kattis/FYI.cpp)
add_executable(Jumbo_Javelin /Users/tomo/CLionProjects/compprog/solved/Kattis/Jumbo_Javelin.cpp)
add_executable(Add_Two_Numbers /Users/tomo/CLionProjects/compprog/solved/Kattis/Add_Two_Numbers.cpp)
add_executable(Sort_Two_Numbers /Users/tomo/CLionProjects/compprog/solved/Kattis/Sort_Two_Numbers.cpp)
add_executable(Digit_Swap /Users/tomo/CLionProjects/compprog/solved/Kattis/Digit_Swap.cpp)
add_executable(Adding_Trouble /Users/tomo/CLionProjects/compprog/solved/Kattis/Adding_Trouble.cpp)
add_executable(GCVWR /Users/tomo/CLionProjects/compprog/solved/Kattis/GCVWR.cpp)
add_executable(Betting /Users/tomo/CLionProjects/compprog/solved/Kattis/Betting.cpp)
add_executable(IsItHalloween /Users/tomo/CLionProjects/compprog/solved/Kattis/IsItHalloween.cpp)
add_executable(N-sum /Users/tomo/CLionProjects/compprog/solved/Kattis/N-sum.cpp)
add_executable(Eye_of_Sauron /Users/tomo/CLionProjects/compprog/solved/Kattis/Eye_of_Sauron.cpp)
add_executable(Which_is_Greater /Users/tomo/CLionProjects/compprog/solved/Kattis/Which_is_Greater.cpp)
add_executable(Quadrant_Selection /Users/tomo/CLionProjects/compprog/solved/Kattis/Quadrant_Selection.cpp)